--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <ul class="menü-genel" data-gnl="0 göbekte">
       <li><a href="https://data-deveb.github.io" class="logo">deveb</a></li>
     </ul>
-    <ul class="menü-genel" data-gnl="1 1p göbekte" data-ort="0">
+    <ul class="menü-genel" data-gnl="1 1p göbekte ortada" data-ort="0">
       <li><a href="https://data-deveb.github.io/belgeler/deveb.html">Belgeler</a></li>
       <!--<li><a href="belgeler/kap-orgusu/ornekler.html">Kap Örnekleri</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/sekme-orgusu.html">Sekme</a></li>
