--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
   <div data-gnl="24" class="header">
   {% include header.html %}
   </div>
+  <div data-gnl="24">
+    {% contentblock sidebar %}
+  </div>
   <div data-gnl="23 kaplama">
     <div data-gnl="24" data-ort="4">
     {% include icerik.html %}
