--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -122,7 +122,8 @@
     * > h3:first-child,
     * > h4:first-child,
     * > h5:first-child,
-    * > h6:first-child {margin-top:0;}
+    * > h6:first-child,
+    [data-metin~="ilk"] {margin-top:0;}
     h1{font-size:1.5em}
       h2{font-size:1.1em}
         h3{font-size:1.1em}
