--- a/assets/css/deveb.english.css
+++ b/assets/css/deveb.english.css
@@ -41,7 +41,7 @@
 
     • SCREEN CONTROL      -> Line-tag: none
       • GENERAL           -> Line-tag: S01
-      ◘ LAST-CHILDREN ◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘      ◘ ALONE-CHILD ◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘      ◘ LAST-CHILDREN ◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘
+      ◘ LAST-CHILDREN ◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘      ◘ ALONE-CHILD ◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘      ◘ LAST-CHILDREN ◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘◘
       • MINI » ∞          -> Line-tag: S010      • MINI          -> Line-tag: S011      • MINI » 0          -> Line-tag: S012
       • EXTRA-SMALL » ∞   -> Line-tag: S020      • EXTRA-SMALL   -> Line-tag: S021      • EXTRA-SMALL » 0   -> Line-tag: S022
       • SMALL » ∞         -> Line-tag: S030      • SMALL         -> Line-tag: S031      • SMALL » 0         -> Line-tag: S032
