--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -2,6 +2,7 @@
   <li><h3 data-metin="ana gri">Belgeler</h3></li>
   <li><a href="/belgeler/deveb.html">Giriş</a></li>
   <li><a href="/belgeler/kurulum.html">Kurulum</a></li>
+  <li><a href="/belgeler/ekran-orgusu.html">Ekran Örgüsü</a>
   <li><a href="/belgeler/kap-orgusu.html">Kap Örgüsü</a>
     <ul>
       <li><a href="/belgeler/kap-orgusu/olcekler.html">Ölçekler</a>
