--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -274,37 +274,37 @@ G00 GENEL | Ekran ölçeği: 0 ≤ * < ∞
     KOCAMAN-soner (kcm) veya (kcm-soner) | Ekran ölçeği: * < 1900px
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (max-width:1900px) {
-      [data-kcm~="öncesiyle-gizle"]{display: none;}
+      [data-kcm~="küçükleriyle-gizle"]{display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     BÜYÜK-soner (byk) veya (byk-soner) | Ekran ölçeği: * < 1200px
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (max-width:1200px) {
-      [data-byk~="öncesiyle-gizle"]{display: none;}
+      [data-byk~="küçükleriyle-gizle"]{display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     ORTA-soner (ort) veya (ort-soner) | Ekran ölçeği: * < 992px
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (max-width:993px) {
-      [data-ort~="öncesiyle-gizle"]{display: none;}
+      [data-ort~="küçükleriyle-gizle"]{display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     KÜÇÜK-soner (kçk) veya (kçk-soner) | Ekran ölçeği: * < 768px
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (max-width:768px) {
-      [data-kçk~="öncesiyle-gizle"]{display: none;}
+      [data-kçk~="küçükleriyle-gizle"]{display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     UFAK-soner (ufk) veya (ufk-soner) | Ekran ölçeği: * < 576px
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (max-width:576px) {
-      [data-ufk~="öncesiyle-gizle"]{display: none;}
+      [data-ufk~="küçükleriyle-gizle"]{display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     MİNİK-soner (ufk) veya (ufk-soner) | Ekran ölçeği: * < 576px
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (max-width:300px) {
-      [data-mnk~="öncesiyle-gizle"],[data-mnk~="gizle"]{display: none;}
+      [data-mnk~="küçükleriyle-gizle"],[data-mnk~="gizle"]{display: none;}
     }
 
 /*  DUYARLI TİP İLKER * >> ∞ */
@@ -388,7 +388,7 @@ S01 UFAK-İLKER (ufk) veya (ufk-soner) | Ekran ölçeği: 300px ≤ *
       [data-ufk~="satırda"]{align-items: baseline;}
       [data-ufk~="satırda-ol"]{align-self: baseline;}
 
-      [data-ufk~="sonrasıyla-gizle"],[data-mnk~="sonrasını-gizle"]{display: none;}
+      [data-ufk~="büyükleriyle-gizle"],[data-mnk~="büyükleri-gizle"]{display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 S02 KÇK-ilker (kçk) veya (kçk-ilker) | Ekran ölçeği: 576px ≤ *
@@ -466,7 +466,7 @@ S02 KÇK-ilker (kçk) veya (kçk-ilker) | Ekran ölçeği: 576px ≤ *
       [data-kçk~="satırda"]{align-items: baseline;}
       [data-kçk~="satırda-ol"]{align-self: baseline;}
 
-      [data-kçk~="sonrasıyla-gizle"],[data-ufk~="sonrasını-gizle"]{display: none;}
+      [data-kçk~="büyükleriyle-gizle"],[data-ufk~="büyükleri-gizle"]{display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 S03 ORTA-ilker (ort) veya (ort-ilker) | Ekran ölçeği: 768px ≤ *
@@ -544,7 +544,7 @@ S03 ORTA-ilker (ort) veya (ort-ilker) | Ekran ölçeği: 768px ≤ *
       [data-ort~="satırda"]{align-items: baseline;}
       [data-ort~="satırda-ol"]{align-self: baseline;}
 
-      [data-ort~="sonrasıyla-gizle"],[data-kçk~="sonrasını-gizle"]{display: none;}
+      [data-ort~="büyükleriyle-gizle"],[data-kçk~="büyükleri-gizle"]{display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 S04 BÜYÜK-ilker (byk) veya (byk-ilker) | Ekran ölçeği: 992px ≤ *
@@ -622,7 +622,7 @@ S04 BÜYÜK-ilker (byk) veya (byk-ilker) | Ekran ölçeği: 992px ≤ *
       [data-byk~="satırda"]{align-items: baseline;}
       [data-byk~="satırda-ol"]{align-self: baseline;}
 
-      [data-byk~="sonrasıyla-gizle"],[data-ort~="sonrasını-gizle"]{display: none;}
+      [data-byk~="büyükleriyle-gizle"],[data-ort~="büyükleri-gizle"]{display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 S05 KOCAMAN-ilker (kcm) veya (kcm-ilker) | Ekran ölçeği: 1200px ≤ *
@@ -700,7 +700,7 @@ S05 KOCAMAN-ilker (kcm) veya (kcm-ilker) | Ekran ölçeği: 1200px ≤ *
       [data-kcm~="satırda"]{align-items: baseline;}
       [data-kcm~="satırda-ol"]{align-self: baseline;}
 
-      [data-kcm~="sonrasıyla-gizle"],[data-byk~="sonrasını-gizle"]{display: none;}
+      [data-kcm~="büyükleriyle-gizle"],[data-byk~="büyükleri-gizle"]{display: none;}
     }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
@@ -747,12 +747,12 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
       [data-dev~="21o"]{flex:21;}  [data-dev~="22o"]{flex:22;} [data-dev~="23o"]{flex:23;}  [data-dev~="24o"]{flex:24;}
 
       [data-gnl~="kaplama"],[data-dev~="kaplama"],
-      [data-kcm~="sonrasını-kaplama"],[data-kcm~="sonrasıyla-kaplama"],
-      [data-byk~="sonrasını-kaplama"],[data-byk~="sonrasıyla-kaplama"],
-      [data-ort~="sonrasını-kaplama"],[data-ort~="sonrasıyla-kaplama"],
-      [data-kçk~="sonrasını-kaplama"],[data-kçk~="sonrasıyla-kaplama"],
-      [data-ufk~="sonrasını-kaplama"],[data-ufk~="sonrasıyla-kaplama"],
-      [data-mnk~="sonrasını-kaplama"],[data-mnk~="sonrasıyla-kaplama"]{
+      [data-kcm~="büyükleri-kaplama"],[data-kcm~="büyükleriyle-kaplama"],
+      [data-byk~="büyükleri-kaplama"],[data-byk~="büyükleriyle-kaplama"],
+      [data-ort~="büyükleri-kaplama"],[data-ort~="büyükleriyle-kaplama"],
+      [data-kçk~="büyükleri-kaplama"],[data-kçk~="büyükleriyle-kaplama"],
+      [data-ufk~="büyükleri-kaplama"],[data-ufk~="büyükleriyle-kaplama"],
+      [data-mnk~="büyükleri-kaplama"],[data-mnk~="büyükleriyle-kaplama"]{
         flex-basis: 1890px;
         max-width: 1890px;
       }
@@ -789,7 +789,7 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
       [data-dev~="satırda"]{align-items: baseline;}
       [data-dev~="satırda-ol"]{align-self: baseline;}
 
-      [data-dev~="sonrasıyla-gizle"],[data-dev~="sonrasını-gizle"],[data-kcm~="sonrasını-gizle"]{display: none;}
+      [data-dev~="büyükleriyle-gizle"],[data-dev~="büyükleri-gizle"],[data-kcm~="büyükleri-gizle"]{display: none;}
     }
 
 /*  DUYARLI TİP - YALIN |< * >| */
@@ -798,15 +798,15 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (max-width:300px) {
       [data-gnl~="kaplama"],
-      [data-mn~="sonrasıyla-kaplama"],
+      [data-mn~="büyükleriyle-kaplama"],
       [data-mn~="kaplama"],
-      [data-mn~="öncesiyle-kaplama"],
-      [data-ufk~="öncesini-kaplama"],[data-ufk~="öncesiyle-kaplama"],
-      [data-kçk~="öncesini-kaplama"],[data-kçk~="öncesiyle-kaplama"],
-      [data-ort~="öncesini-kaplama"],[data-ort~="öncesiyle-kaplama"],
-      [data-byk~="öncesini-kaplama"],[data-byk~="öncesiyle-kaplama"],
-      [data-kcm~="öncesini-kaplama"],[data-kcm~="öncesiyle-kaplama"],
-      [data-dev~="öncesini-kaplama"],[data-dev~="öncesiyle-kaplama"]{
+      [data-mn~="küçükleriyle-kaplama"],
+      [data-ufk~="küçükleri-kaplama"],[data-ufk~="küçükleriyle-kaplama"],
+      [data-kçk~="küçükleri-kaplama"],[data-kçk~="küçükleriyle-kaplama"],
+      [data-ort~="küçükleri-kaplama"],[data-ort~="küçükleriyle-kaplama"],
+      [data-byk~="küçükleri-kaplama"],[data-byk~="küçükleriyle-kaplama"],
+      [data-kcm~="küçükleri-kaplama"],[data-kcm~="küçükleriyle-kaplama"],
+      [data-dev~="küçükleri-kaplama"],[data-dev~="küçükleriyle-kaplama"]{
         flex-basis: 100%;
         max-width: 100%;
       }
@@ -817,15 +817,15 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (min-width:300px) and (max-width:576px) {
       [data-gnl~="kaplama"],
-      [data-mn~="sonrasını-kaplama"],[data-mn~="sonrasıyla-kaplama"],
-      [data-ufk~="sonrasıyla-kaplama"],
+      [data-mn~="büyükleri-kaplama"],[data-mn~="büyükleriyle-kaplama"],
+      [data-ufk~="büyükleriyle-kaplama"],
       [data-ufk~="kaplama"],
-      [data-ufk~="öncesiyle-kaplama"],
-      [data-kçk~="öncesini-kaplama"],[data-kçk~="öncesiyle-kaplama"],
-      [data-ort~="öncesini-kaplama"],[data-ort~="öncesiyle-kaplama"],
-      [data-byk~="öncesini-kaplama"],[data-byk~="öncesiyle-kaplama"],
-      [data-kcm~="öncesini-kaplama"],[data-kcm~="öncesiyle-kaplama"],
-      [data-dev~="öncesini-kaplama"],[data-dev~="öncesiyle-kaplama"]{
+      [data-ufk~="küçükleriyle-kaplama"],
+      [data-kçk~="küçükleri-kaplama"],[data-kçk~="küçükleriyle-kaplama"],
+      [data-ort~="küçükleri-kaplama"],[data-ort~="küçükleriyle-kaplama"],
+      [data-byk~="küçükleri-kaplama"],[data-byk~="küçükleriyle-kaplama"],
+      [data-kcm~="küçükleri-kaplama"],[data-kcm~="küçükleriyle-kaplama"],
+      [data-dev~="küçükleri-kaplama"],[data-dev~="küçükleriyle-kaplama"]{
         flex-basis: calc(100% - 20px);
         max-width: calc(100% - 20px);
       }
@@ -836,15 +836,15 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (min-width:576px) and (max-width:768px) {
       [data-gnl~="kaplama"],
-      [data-mn~="sonrasını-kaplama"],[data-mn~="sonrasıyla-kaplama"],
-      [data-ufk~="sonrasını-kaplama"],[data-ufk~="sonrasıyla-kaplama"],
-      [data-kçk~="sonrasıyla-kaplama"],
+      [data-mn~="büyükleri-kaplama"],[data-mn~="büyükleriyle-kaplama"],
+      [data-ufk~="büyükleri-kaplama"],[data-ufk~="büyükleriyle-kaplama"],
+      [data-kçk~="büyükleriyle-kaplama"],
       [data-kçk~="kaplama"],
-      [data-kçk~="öncesiyle-kaplama"],
-      [data-ort~="öncesini-kaplama"],[data-ort~="öncesiyle-kaplama"],
-      [data-byk~="öncesini-kaplama"],[data-byk~="öncesiyle-kaplama"],
-      [data-kcm~="öncesini-kaplama"],[data-kcm~="öncesiyle-kaplama"],
-      [data-dev~="öncesini-kaplama"],[data-dev~="öncesiyle-kaplama"]{
+      [data-kçk~="küçükleriyle-kaplama"],
+      [data-ort~="küçükleri-kaplama"],[data-ort~="küçükleriyle-kaplama"],
+      [data-byk~="küçükleri-kaplama"],[data-byk~="küçükleriyle-kaplama"],
+      [data-kcm~="küçükleri-kaplama"],[data-kcm~="küçükleriyle-kaplama"],
+      [data-dev~="küçükleri-kaplama"],[data-dev~="küçükleriyle-kaplama"]{
         flex-basis: 566px;
         max-width: 566px;
       }
@@ -856,15 +856,15 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (min-width:768px) and (max-width:992px) {
       [data-gnl~="kaplama"],
-      [data-mn~="sonrasını-kaplama"],[data-mn~="sonrasıyla-kaplama"],
-      [data-ufk~="sonrasını-kaplama"],[data-ufk~="sonrasıyla-kaplama"],
-      [data-kçk~="sonrasını-kaplama"],[data-kçk~="sonrasıyla-kaplama"],
-      [data-ort~="sonrasıyla-kaplama"],
+      [data-mn~="büyükleri-kaplama"],[data-mn~="büyükleriyle-kaplama"],
+      [data-ufk~="büyükleri-kaplama"],[data-ufk~="büyükleriyle-kaplama"],
+      [data-kçk~="büyükleri-kaplama"],[data-kçk~="büyükleriyle-kaplama"],
+      [data-ort~="büyükleriyle-kaplama"],
       [data-ort~="kaplama"],
-      [data-ort~="öncesiyle-kaplama"],
-      [data-byk~="öncesini-kaplama"],[data-byk~="öncesiyle-kaplama"],
-      [data-kcm~="öncesini-kaplama"],[data-kcm~="öncesiyle-kaplama"],
-      [data-dev~="öncesini-kaplama"],[data-dev~="öncesiyle-kaplama"]{
+      [data-ort~="küçükleriyle-kaplama"],
+      [data-byk~="küçükleri-kaplama"],[data-byk~="küçükleriyle-kaplama"],
+      [data-kcm~="küçükleri-kaplama"],[data-kcm~="küçükleriyle-kaplama"],
+      [data-dev~="küçükleri-kaplama"],[data-dev~="küçükleriyle-kaplama"]{
         flex-basis: 760px;
         max-width: 760px;
       }
@@ -875,15 +875,15 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (min-width:992px) and (max-width:1200px) {
       [data-gnl~="kaplama"],
-      [data-mn~="sonrasını-kaplama"],[data-mn~="sonrasıyla-kaplama"],
-      [data-ufk~="sonrasını-kaplama"],[data-ufk~="sonrasıyla-kaplama"],
-      [data-kçk~="sonrasını-kaplama"],[data-kçk~="sonrasıyla-kaplama"],
-      [data-ort~="sonrasını-kaplama"],[data-ort~="sonrasıyla-kaplama"],
-      [data-byk~="sonrasıyla-kaplama"],
+      [data-mn~="büyükleri-kaplama"],[data-mn~="büyükleriyle-kaplama"],
+      [data-ufk~="büyükleri-kaplama"],[data-ufk~="büyükleriyle-kaplama"],
+      [data-kçk~="büyükleri-kaplama"],[data-kçk~="büyükleriyle-kaplama"],
+      [data-ort~="büyükleri-kaplama"],[data-ort~="büyükleriyle-kaplama"],
+      [data-byk~="büyükleriyle-kaplama"],
       [data-byk~="kaplama"],
-      [data-byk~="öncesiyle-kaplama"],
-      [data-kcm~="öncesini-kaplama"],[data-kcm~="öncesiyle-kaplama"],
-      [data-dev~="öncesini-kaplama"],[data-dev~="öncesiyle-kaplama"]{
+      [data-byk~="küçükleriyle-kaplama"],
+      [data-kcm~="küçükleri-kaplama"],[data-kcm~="küçükleriyle-kaplama"],
+      [data-dev~="küçükleri-kaplama"],[data-dev~="küçükleriyle-kaplama"]{
         flex-basis: 960px;
         max-width: 960px;
       }
@@ -894,14 +894,14 @@ S06 DEV-ilker (dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
     @media screen and (min-width:1200px) and (max-width:1900px) {
       [data-gnl~="kaplama"],
-      [data-mn~="sonrasını-kaplama"],[data-mn~="sonrasıyla-kaplama"],
-      [data-ufk~="sonrasını-kaplama"],[data-ufk~="sonrasıyla-kaplama"],
-      [data-kçk~="sonrasını-kaplama"],[data-kçk~="sonrasıyla-kaplama"],
-      [data-ort~="sonrasını-kaplama"],[data-ort~="sonrasıyla-kaplama"],
-      [data-byk~="sonrasını-kaplama"],[data-byk~="sonrasıyla-kaplama"],
-      [data-kcm~="sonrasıyla-kaplama"],
+      [data-mn~="büyükleri-kaplama"],[data-mn~="büyükleriyle-kaplama"],
+      [data-ufk~="büyükleri-kaplama"],[data-ufk~="büyükleriyle-kaplama"],
+      [data-kçk~="büyükleri-kaplama"],[data-kçk~="büyükleriyle-kaplama"],
+      [data-ort~="büyükleri-kaplama"],[data-ort~="büyükleriyle-kaplama"],
+      [data-byk~="büyükleri-kaplama"],[data-byk~="büyükleriyle-kaplama"],
+      [data-kcm~="büyükleriyle-kaplama"],
       [data-kcm~="kaplama"],
-      [data-kcm~="öncesiyle-kaplama"]{
+      [data-kcm~="küçükleriyle-kaplama"]{
         flex-basis: 1140px;
         max-width: 1140px;
       }
